<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Connecting">

    <TextView
        android:id="@+id/text"
        android:layout_width="300sp"
        android:layout_height="30sp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:text="@string/connect_to_database"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/name"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:background="@drawable/edit_round"
        android:layout_centerHorizontal="true"
        android:hint="@string/database_name"
        android:layout_marginTop="200sp"
        android:autofillHints="@string/database_name"
        android:textSize="25sp"
        android:inputType="text" />

    <EditText
        android:id="@+id/username"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:background="@drawable/edit_round"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/name"
        android:layout_marginTop="10sp"
        android:hint="@string/username"
        android:textSize="25sp"
        android:autofillHints="@string/username"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/pass"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:background="@drawable/edit_round"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/username"
        android:layout_marginTop="10sp"
        android:hint="@string/password"
        android:textSize="25sp"
        android:autofillHints="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/host"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:background="@drawable/edit_round"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/pass"
        android:layout_marginTop="10sp"
        android:hint="@string/host"
        android:textSize="25sp"
        android:autofillHints=""
        android:inputType="text"
        />

    <EditText
        android:id="@+id/port"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:background="@drawable/edit_round"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/host"
        android:layout_marginTop="10sp"
        android:hint="@string/port"
        android:textSize="25sp"
        android:autofillHints=""
        android:inputType="text"
        />


    <Button
        android:id="@+id/connect"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:background="@drawable/button_round"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/port"
        android:text="@string/connect"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:layout_marginTop="15sp"/>

</RelativeLayout>