<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@drawable/gradient_background"
    >

    <ImageView
        android:id="@id/databasealert"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:layout_marginTop="60sp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/database_icon"
        />

    <ImageView
        android:id="@+id/circle1"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_below="@+id/databasealert"
        android:layout_marginLeft="-25dp"
        android:layout_marginTop="-5dp"
        android:src="@drawable/circletransparent" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:autofillHints="@string/first_name"
        android:background="@drawable/edit_round"
        android:textColorHint="#252E2D"
        android:padding="10sp"
        android:layout_below="@+id/databasealert"
        android:hint="@string/first_name"
        android:inputType="text"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/circle3"
        android:layout_width="182dp"
        android:layout_height="182dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-80dp"
        android:layout_marginBottom="-30dp"
        android:src="@drawable/circle" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:background="@drawable/edit_round"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/firstname"
        android:layout_marginTop="10sp"
        android:hint="@string/last_name"
        android:textColorHint="#252E2D"
        android:padding="10sp"
        android:textSize="25sp"
        android:autofillHints="@string/last_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_below="@+id/lastname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/email"
        android:background="@drawable/edit_round"
        android:hint="@string/email"
        android:textColorHint="#252E2D"
        android:padding="10sp"
        android:inputType="text|textEmailAddress"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:autofillHints="@string/passw"
        android:background="@drawable/edit_round"
        android:hint="@string/passw"
        android:textColorHint="#252E2D"
        android:padding="10sp"
        android:inputType="textPassword"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/confirmpass"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_below="@id/pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:autofillHints="Confirm Password"
        android:background="@drawable/edit_round"
        android:hint="@string/confirm_password"
        android:textColorHint="#252E2D"
        android:padding="10sp"
        android:inputType="textPassword"
        android:textSize="25sp" />

    <Button
        android:id="@+id/signup"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_below="@id/confirmpass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40sp"
        android:background="@drawable/button_round"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#4E3E41"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/warn"
        android:layout_width="205sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="30sp"
        android:textAlignment="center"
        android:textColor="#FF0000" />

    <ImageView
        android:id="@+id/circle6"
        android:layout_width="182dp"
        android:layout_height="182dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="-80dp"
        android:layout_marginBottom="-30dp"
        android:src="@drawable/circle" />

    <ImageView
        android:id="@+id/circle5"
        android:layout_width="134dp"
        android:layout_height="94dp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="-50dp"
        android:layout_marginBottom="-50dp"
        android:layout_toLeftOf="@+id/circle6"
        android:src="@drawable/circletransparent" />


</RelativeLayout>