<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".set_parameters"
    android:background="@drawable/gradient_background"
    >
    <ImageView
        android:id="@+id/circle1"
        android:layout_width="194dp"
        android:layout_height="187dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-80dp"
        android:layout_marginRight="-100dp"
        android:src="@drawable/circletransparent" />

    <ImageView
        android:id="@+id/circle2"
        android:layout_width="174dp"
        android:layout_height="154dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-100dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/circletransparent" />

    <TextView
        android:id="@+id/actual_param"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100sp"
        android:gravity="center_horizontal"
        android:text="@string/actual_parameters"
        android:textAlignment="center"
        android:textColor="#BA4A6B"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/value"
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:layout_marginTop="20sp"
        android:layout_below="@+id/actual_param"
        android:text="@string/value"
        android:textAlignment="center"
        android:textColor="#BA4A6B"
        android:textSize="23sp"
        android:textStyle="bold"
        android:gravity="center_horizontal" />


    <TextView
        android:id="@+id/textset_param"
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:layout_below="@+id/value"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:gravity="center_horizontal"
        android:text="@string/set_parameters"
        android:textAlignment="center"
        android:textColor="#BA4A6B"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/set_value"
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:layout_below="@+id/textset_param"
        android:layout_marginTop="10sp"
        android:gravity="center_horizontal"
        android:text="@string/value"
        android:textAlignment="center"
        android:textColor="#BA4A6B"
        android:textSize="23sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_value"
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:layout_below="@+id/set_value"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="-70dp"
        android:gravity="center_horizontal"
        android:layout_toEndOf="@+id/set_value"
        android:layout_toRightOf="@+id/set_value"
        android:autofillHints="30sp"
        android:inputType="number"
        android:textSize="20sp"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/set"
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:layout_below="@+id/edit_value"
        android:layout_marginTop="50sp"
        android:text="Set"
        android:background="@drawable/button_round"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textColor="#4E3E41"
        android:textStyle="bold"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/log_out"
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:layout_below="@+id/set"
        android:layout_marginTop="10sp"
        android:text="@string/logout"
        android:background="@drawable/button_round"
        android:layout_centerHorizontal="true"
        android:textSize="23sp"
        android:textColor="#4E3E41"
        android:textStyle="bold"
        android:textAllCaps="false"
        />

    <TextView
        android:id="@+id/current_value_text"
        android:layout_width="97sp"
        android:layout_height="50sp"
        android:layout_above="@+id/value"
        android:layout_below="@+id/actual_param"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:layout_marginRight="-303dp"
        android:layout_marginBottom="-62dp"
        android:layout_toLeftOf="@+id/value"
        android:layout_toEndOf="@+id/value"
        android:layout_toRightOf="@+id/value"
        android:autofillHints="30sp"
        android:inputType="number"
        android:textSize="20sp"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/warn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/log_out"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="30sp"
        android:textAlignment="center"
        android:textColor="#FF0000" />

</RelativeLayout>